EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/05/2009==
Trevius: SoF - Melee stun/bash no longer causes you to spin
Trevius: SoF - Spell Fizzles and Interrupts no longer cause abnormally long refresh times
realityincarnate: Fixed lore check bug with items in lore group -1
KLS: DoTs should no longer break roots early.
KLS: Added Special Attack hit magical 'm' and special attack hit bane 'b', will allow the mobs affected to hit things that require magical or bane weapons to hit.

==05/04/2009==
KLS: Code block for pets getting sent into attack did not verify that other was not null, causing rare crashes the old way and a pretty common crash with it's new positioning.  This has been corrected.
Derision: Updated spell_type in altadv_vars table to reflect the shared reuse timer ID that it really is.
Derision: AA reuse timers should now display correctly with hotkeys remaining depressed when appropriate.
KLS: Code block for pets getting sent into attack did not verify that other was not null, causing rare crashes the old way and a pretty common crash with it's new positioning.  This has been corrected.
KLS: Added area rampage 'r' npc special attak code.
Congdar: Bots - Added Rogue Triple Backstab AA, Enhanced #bot list, Fixed beneficial weapon procs to not effect the entire group.
realityincarnate: Fix for SoF attunable items
realityincarnate: Added checks for multiple items in the same lore group
Congdar: Bots - Fix Cleric resurrect spell selection, Added zone profiles, Fixed crash with bot follow

REQUIRED SQL: utils/sql/svn/463_altadv_vars.sql

==05/03/2009==
KLS: Some optimizations for the aggro code.  Added a timer for aggro checking will do it twice a second by default: lower AItarget_check_duration in features.h if aggro feels too sluggish for your tastes and recompile.
Derision: Increased reuse_time in AA_DBAction to a uint32 to support reuse timers greater than 18 hours.